Enable --enable-preview for JDK21 to enable MemorySegment for faster vector search.
Signed-off-by: Dooyong Kim <kdooyong@amazon.com>